fixed buttons dark mode styling

--- a/src/styles/components/IconButton.css
+++ b/src/styles/components/IconButton.css
@@ -25,11 +25,11 @@ color mode: light, dark
 
 /* color */
 .primary-red{
-    background: var(--red-600);
+    background: var(--red-alpha-600);
     color: var(--red-900);
 }
 .secondary-red{
-    background: var(--red-100);
+    background: var(--red-alpha-100);
     color: var(--red-900);
 }
 .ghost-red{
@@ -37,11 +37,11 @@ color mode: light, dark
     color: var(--red-900);
 }
 .primary-green{
-    background: var(--green-600);
+    background: var(--green-alpha-600);
     color: var(--green-900);
 }
 .secondary-green{
-    background: var(--green-100);
+    background: var(--green-alpha-100);
     color: var(--green-900);
 }
 .ghost-green{
@@ -49,11 +49,11 @@ color mode: light, dark
     color: var(--green-900);
 }
 .primary-blue{  
-    background: var(--blue-600);
+    background: var(--blue-alpha-600);
     color: var(--blue-900);
 }
 .secondary-blue{
-    background: var(--blue-100);
+    background: var(--blue-alpha-100);
     color: var(--blue-900);
 }
 .ghost-blue{
